# Drishti

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MODELS.md  README.md  RELEASING.md  SECURITY.md  SERVING.md  pyproject.toml
.github/workflows/: docker.yml  release.yml  wheels.yml
clients/node/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
clients/node/src/: client.ts  config.ts  errors.ts  index.ts  models.ts  retry.ts
clients/python/: README.md  pyproject.toml
clients/python/src/drishti_sdk/: __init__.py  _config.py  _errors.py  _models.py  _retry.py  aio.py  client.py
config/: example.toml  serving-example.toml  starter.toml
crates/drishti-cli/: Cargo.toml
crates/drishti-cli/src/: main.rs
crates/drishti-client/: Cargo.toml
crates/drishti-client/examples/: parity.rs
crates/drishti-client/src/: lib.rs
crates/drishti-core/: Cargo.toml
crates/drishti-core/src/: config.rs  engine.rs  error.rs  lib.rs  safety.rs  source.rs  types.rs
crates/drishti-core/src/checks/: mod.rs  output.rs  pii.rs  prompt.rs
crates/drishti-ffi-python/: Cargo.toml
crates/drishti-ffi-python/src/: lib.rs
crates/drishti-models/: Cargo.toml
crates/drishti-models/src/: lib.rs
crates/drishti-regex/: Cargo.toml
crates/drishti-regex/src/: lib.rs
crates/drishti-server/: Cargo.toml
crates/drishti-server/src/: main.rs
eval/: .gitignore  Cargo.toml  README.md
eval/benchmarks/: bench_model.py  convert_output.py  convert_pii.py  convert_prompt.py
eval/datasets/: output_safety.jsonl  pii.jsonl  prompt_injection.jsonl
eval/results/: benchmark.json  latest.json
eval/src/: main.rs
scripts/: smoke_test.sh
