[workspace]
resolver = "2"
members = [
    "crates/drishti-core",
    "crates/drishti-models",
    "crates/drishti-regex",
    "crates/drishti-cli",
    "crates/drishti-server",
    "crates/drishti-ffi-python",
    "eval",
]

# The Python extension module is built by maturin (which sets the macOS
# dynamic-lookup link args for the Python C-API). A plain `cargo build` would try
# to link it like a normal cdylib and fail on undefined `_Py*` symbols, so it is
# excluded from the default set. It stays a member so maturin and tooling see it.
default-members = [
    "crates/drishti-core",
    "crates/drishti-models",
    "crates/drishti-regex",
    "crates/drishti-cli",
    "crates/drishti-server",
    "eval",
]

# pyo3 0.28's `#[cold]` argument_extraction_error is referenced across codegen
# units; on Rust 1.94 the default multi-CGU split leaves it unresolved when
# linking the extension-module cdylib. Compiling pyo3 as a single codegen unit
# keeps the reference and the definition together.
[profile.release.package.pyo3]
codegen-units = 1

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "Elastic-2.0"
repository = "https://github.com/SarthiAI/Drishti"

[workspace.dependencies]
# Internal crates. Published to crates.io as `sarthiai-drishti-*` (the plain
# `drishti-*` brand is kept for the in-code names via the dep key and [lib] name,
# so Rust source keeps using `drishti_core` etc.). Keep these versions in step
# with workspace.package.version above.
drishti-regex = { package = "sarthiai-drishti-regex", path = "crates/drishti-regex", version = "0.1.1" }
drishti-core = { package = "sarthiai-drishti-core", path = "crates/drishti-core", version = "0.1.1" }
drishti-models = { package = "sarthiai-drishti-models", path = "crates/drishti-models", version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"

# Heavy, non-pure deps live in the crates that are allowed to carry them.
# load-dynamic: do NOT link or download onnxruntime at build. The Rust then
# builds pure (manylinux/Windows/any-glibc, like a no-native-dep crate), and ort
# dlopens libonnxruntime at runtime from ORT_DYLIB_PATH. onnxruntime itself is
# provided by the official `onnxruntime` distribution (pip package / Docker),
# which is already built for broad compatibility. Avoids the glibc-2.38 wall,
# the OpenSSL pull (tls-native), and the Windows CRT clash.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "tracing", "api-24"] }
tokenizers = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
# Config loading: TOML base, overlaid by environment variables / .env files.
figment = { version = "0.10", default-features = false, features = ["toml", "env"] }
dotenvy = "0.15"

# Server only.
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }

# Python FFI only. abi3-py39 yields one forward-compatible wheel per platform
# that works on Python 3.9 through 3.13+.
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
pythonize = "0.28"
