[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "drishti"
version = "0.1.0"
description = "Content-safety checks (prompt injection, PII, output safety) for LLM systems."
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/SarthAI/Drishti"

[tool.maturin]
# Build the bindings crate out of the workspace, as an abi3 wheel.
manifest-path = "crates/drishti-ffi-python/Cargo.toml"
module-name = "drishti"
features = ["pyo3/extension-module"]
