[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "sarthiai-drishti"
version = "0.1.1"
description = "Content-safety checks (prompt injection, PII, output safety) for LLM systems. Imported as `drishti`."
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "README.md"
# The extension is built with ort's load-dynamic (it bundles no ONNX Runtime, so
# the wheel is small and portable). onnxruntime provides the shared library at
# runtime; the extension locates it on import. onnxruntime >= 1.24 matches the
# ONNX Runtime C API (v24) this ort build targets.
dependencies = ["onnxruntime>=1.24"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/SarthiAI/Drishti"

[tool.maturin]
# Build the bindings crate out of the workspace, as an abi3 wheel.
manifest-path = "crates/drishti-ffi-python/Cargo.toml"
module-name = "drishti"
features = ["pyo3/extension-module"]
