[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drishti-sdk"
version = "0.1.0"
description = "Thin remote HTTP client (SDK) for a running drishti-server content-safety service"
readme = "README.md"
requires-python = ">=3.9"
license = "Elastic-2.0"
authors = [{ name = "Chirotpal Das" }]
keywords = ["drishti", "content-safety", "prompt-injection", "pii", "llm-guardrails"]
dependencies = ["httpx>=0.27"]

[project.urls]
Repository = "https://github.com/SarthAI/Drishti"

[tool.hatch.build.targets.wheel]
packages = ["src/drishti_sdk"]
