[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sarthiai-drishti-sdk"
version = "0.1.2"
description = "Thin remote HTTP client (SDK) for a running drishti-server content-safety service. Imported as `drishti_sdk`."
readme = "README.md"
requires-python = ">=3.9"
license = "Elastic-2.0"
authors = [{ name = "Chirotpal Das" }]
keywords = ["drishti", "content-safety", "prompt-injection", "pii", "llm-guardrails"]
dependencies = ["httpx>=0.27"]

[project.urls]
Repository = "https://github.com/SarthiAI/Drishti"

[tool.hatch.build.targets.wheel]
packages = ["src/drishti_sdk"]
