[package]
name = "drishti-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "drishti"
path = "src/main.rs"

[dependencies]
drishti-core = { path = "../drishti-core" }
drishti-models = { path = "../drishti-models" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
dotenvy = { workspace = true }
