[package]
name = "drishti-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "drishti"
path = "src/main.rs"

[dependencies]
drishti-core = { workspace = true }
drishti-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
dotenvy = { workspace = true }

[features]
# Run the CLI's checks on a GPU (config still selects the provider).
cuda = ["drishti-core/cuda"]
tensorrt = ["drishti-core/tensorrt"]
