[package]
name = "sarthiai-drishti-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core content-safety checks (prompt injection, PII, output safety) for LLM systems."

# Published as `sarthiai-drishti-core`; imported in code as `drishti_core`.
[lib]
name = "drishti_core"

# Detection logic and the public types. Carries ort + tokenizers (inference)
# but NOT tokio, NOT an HTTP client, NOT pyo3. Model bytes arrive through the
# ModelSource trait, supplied by the caller. See ADR-001 and invariant I4.
[dependencies]
drishti-regex = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
figment = { workspace = true }
async-trait = { workspace = true }

[features]
# GPU execution providers, opt-in. The default build stays CPU-only and pure
# (still load-dynamic, no static CUDA link), so wheels/crates/Docker keep their
# broad portability. A GPU deployment builds with one of these plus a
# CUDA-enabled libonnxruntime at ORT_DYLIB_PATH. See ADR-012.
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
