[package]
name = "drishti-regex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Versioned PII regex recognizer set for Drishti content safety."

# Pure. The regex PII recognizer set. No I/O, no model, no dependency on core.
[dependencies]
regex = { workspace = true }
